# makao-online-cpp

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: clang-tools.cmake
include/makao-online/: card.hpp  deck.hpp  empty_deck.hpp  empty_deck_exception.hpp  game_state.hpp  lost_connection.hpp  lost_connection_exception.hpp  player_hand.hpp  request.hpp  sfml_server_config.hpp  temp_configs.hpp
include/makao-online/client/: client.hpp
include/makao-online/coordinator/: game_coordinator.hpp
include/makao-online/interfaces/: network_interface.hpp  player_action_interface.hpp  serializable.hpp  system_interface.hpp
include/makao-online/server/: game.hpp  game_manager.hpp  old_game.hpp  old_player.hpp  server.hpp  sfml_network.hpp  system.hpp
src/: CMakeLists.txt  Card.cpp  Card.hpp  Content.cpp  Content.hpp  ContentWindow.cpp  ContentWindow.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  GameCoordinator.cpp  GameCoordinator.hpp  InputForm.cpp  InputForm.hpp  LogWindow.cpp  LogWindow.hpp  LostConnectionException.hpp  MenuWindow.cpp  MenuWindow.hpp  Player.cpp  Player.hpp  Server.cpp  Server.hpp  ServerPacket.cpp  ServerPacket.hpp  Window.cpp  Window.hpp  card.cpp  deck.cpp  game-client.cpp  game-coordinator.cpp  game-server.cpp  makaoexcept.hpp  ncwindows
src/client/: CMakeLists.txt  client.cpp  main.cpp  old_main.cpp
src/coordinator/: CMakeLists.txt  game_coordinator.cpp  main.cpp
src/server/: CMakeLists.txt  game.cpp  game_manager.cpp  main.cpp  old_game.cpp  old_player.cpp  old_server.cpp  old_server_app.cpp  player.cpp  server.cpp  sfml_network.cpp  system.cpp
test/: CMakeLists.txt  serialize_test.cpp
